--- a/node-backend/public/index.html
+++ b/node-backend/public/index.html
@@ -5,11 +5,15 @@
 	<title>GGL Leaflet Webmap Tutorial</title>
 	<link rel="stylesheet" href="stylesheets/style.css">
 	<link rel="stylesheet" href="stylesheets/leaflet.css">
+	<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+	integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+	crossorigin=""></script>
 </head>
 
 <body>
 	<div id="map"></div>
 	<script src="javascripts/webmap.js" charset="utf-8"></script>
+	<script src="javascripts/popups.js" charset="utf-8"></script>
 </body>
 
 
