--- a/node-backend/public/index.html
+++ b/node-backend/public/index.html
@@ -1,20 +1,63 @@
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>GGL Leaflet Webmap Tutorial</title>
+    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="stylesheets/leaflet.css" />
+    <script
+      src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+      integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+      crossorigin=""
+    ></script>
+    <meta
+      name="google-signin-client_id"
+      content="1053023923235-fp3thbg8tqv6o8bmcsjvjl09p95dnnck.apps.googleusercontent.com"
+    />
+    <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+  </head>
 
-<head>
-	<meta charset="utf-8"/>
-	<title>GGL Leaflet Webmap Tutorial</title>
-	<link rel="stylesheet" href="stylesheets/style.css">
-	<link rel="stylesheet" href="stylesheets/leaflet.css">
-	<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
-	integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-	crossorigin=""></script>
-</head>
+  <body>
+    <div id="header">
+      <div id="title">Streats</div>
+      <div
+        id="g_id_onload"
+        data-client_id="1053023923235-fp3thbg8tqv6o8bmcsjvjl09p95dnnck.apps.googleusercontent.com"
+        data-context="signin"
+        data-ux_mode="popup"
+        data-login_uri="http://localhost:3000/users"
+        data-auto_prompt="false"
+		data-callback="handleCredentialResponse"
+      ></div>
+	  <script>
+		function handleCredentialResponse(response) {
+			console.log(response)
+		}
+	  </script>
 
-<body>
-	<div id="map"></div>
-	<script src="javascripts/webmap.js" charset="utf-8"></script>
-	<script src="javascripts/popups.js" charset="utf-8"></script>
-</body>
+      <div
+        class="g_id_signin"
+        data-type="standard"
+        data-shape="rectangular"
+        data-theme="outline"
+        data-text="signin_with"
+        data-size="large"
+        data-logo_alignment="left"
+      ></div>
+    </div>
+    <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
+    <div id="map"></div>
+    <script src="javascripts/webmap.js" charset="utf-8"></script>
+    <script src="javascripts/popups.js" charset="utf-8"></script>
+  </body>
 
-
+  <script>
+    function onSignIn(googleUser) {
+      var profile = googleUser.getBasicProfile();
+      console.log("ID: " + profile.getId()); // Do not send to your backend! Use an ID token instead.
+      console.log("Name: " + profile.getName());
+      console.log("Image URL: " + profile.getImageUrl());
+      console.log("Email: " + profile.getEmail()); // This is null if the 'email' scope is not present.	}
+    }
+  </script>
 </html>
