--- a/node-backend/public/index.html
+++ b/node-backend/public/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>GGL Leaflet Webmap Tutorial</title>
+    <title>Streats</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
     <link rel="stylesheet" href="stylesheets/leaflet.css" />
     <script
